gcc/testsuite/gcc.dg/noncompile/pr52290.c
/* { dg-error "undeclared here" "undeclared" { target *-*-* } 3 } */
/* { dg-error "expected" "expected" { target *-*-* } 3 } */
int f()[j]
